--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "axios": "^0.18.0",
     "bootstrap-vue": "^2.0.0-rc.14",
     "vue": "^2.6.10",
-    "vue-router": "^3.0.1"
+    "vue-axios": "^2.1.4",
+    "vue-router": "^3.0.1",
+    "vuex": "^3.1.0"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
