--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "bootstrap-vue": "^2.0.0-rc.14",
     "vue": "^2.6.10",
     "vue-axios": "^2.1.4",
+    "vue-loading-overlay": "^3.2.0",
     "vue-router": "^3.0.1",
     "vuex": "^3.1.0"
   },
