--- a/package.json
+++ b/package.json
@@ -13,11 +13,11 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.17",
     "@fortawesome/free-solid-svg-icons": "^5.8.1",
     "@fortawesome/vue-fontawesome": "^0.1.5",
+    "@johmun/vue-tags-input": "^2.0.1",
     "axios": "^0.18.0",
     "bootstrap-vue": "^2.0.0-rc.14",
     "vue": "^2.6.10",
     "vue-axios": "^2.1.4",
-    "vue-bootstrap-typeahead": "^0.2.6",
     "vue-loading-overlay": "^3.2.0",
     "vue-router": "^3.0.1",
     "vuex": "^3.1.0"
