--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.17",
     "@fortawesome/free-solid-svg-icons": "^5.8.1",
     "@fortawesome/vue-fontawesome": "^0.1.5",
+    "@johmun/vue-tags-input": "^2.0.1",
     "axios": "^0.18.0",
     "bootstrap-vue": "^2.0.0-rc.14",
     "vue": "^2.6.10",
