--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "vue-axios": "^2.1.4",
     "vue-loading-overlay": "^3.2.0",
     "vue-router": "^3.0.1",
+    "vuejs-noty": "^0.1.3",
     "vuex": "^3.1.0"
   },
   "devDependencies": {
